--- a/item.html
+++ b/item.html
@@ -151,8 +151,8 @@
                 </div>
             </div>
             <a href="./catalog.html" class="info-nav_back">
-                    <img src="./images/arrow-orange-left.png" alt="Стрелка назад" class="info-nav_back-arrow">
-                    <p class="info-nav_range-header info-nav_back-title">НАЗАД</p>
+                <img src="./images/arrow-orange-left.png" alt="Стрелка назад" class="info-nav_back-arrow">
+                <p class="info-nav_range-header info-nav_back-title">НАЗАД</p>
             </a>
         </section>
         <section class="item section">
@@ -161,13 +161,14 @@
                     <img src="./images/card-item.png" alt="Изображение товара" class="item-img">
                 </div>
                 <div class="item-info">
-                    <div class="cards-container_list-nav">
-                        <p class="cards-container_list-nav_text">Заголовок раздела</p>
+                    <ul class="cards-container_list-nav">
+                        <li class="cards-container_list-nav_text"><a class="breadcrumb__links" href="">Заголовок раздела</a></li>
                         <img class="cards-container_list-nav_img" src="./images/arrow-orange.png" alt="icon">
-                        <p class="cards-container_list-nav_text cards-container_list-nav_text-color"> Подзаголовок
-                            раздела
-                        </p>
-                    </div>
+                        <li class="cards-container_list-nav_text cards-container_list-nav_text-color"><a class="breadcrumb__links breadcrumb__links_color"
+                                href="">Подзаголовок
+                                раздела</a>
+                        </li>
+                    </ul>
                     <h3 class="info-links__list_header item-name">Серебро азотнокислое</h3>
                     <p class="item-code">Артикул: 84202034-12</p>
                     <div class="item-options">
