--- a/catalog.html
+++ b/catalog.html
@@ -499,15 +499,8 @@
                             </div>
                             <div class="popular-card__text-wrapper-list">
                                 <h3 class="new-card__title popular-card__title"><a class="new-card__title popular-card__title" href="item.html">Название данного товара или средства
+                                    в две строчкиНазвание данного товара или средства
                                     в две строчки</a></h3>
-                                <div class="popular-card__text-container">
-                                    <p class="popular-card__text_list">
-                                        Арт. 5683921</p>
-                                    <p class="popular-card__text_list">
-                                        Страна: Россия</p>
-                                    <p class="popular-card__text_list">
-                                        ГОСТ 5683921-13.4567</p>
-                                </div>
                             </div>
                             <ul class="popular-card__list-checkbox_container">
                                 <li class="popular-card__list-checkbox"><input class="popular-card__list-checkbox_input"
@@ -515,22 +508,8 @@
                                     <label class="popular-card__text_list" for="product-selection">Разновидность
                                         товара</label>
                                 </li>
-                                <li class="popular-card__list-checkbox"><input class="popular-card__list-checkbox_input"
-                                        type="checkbox" id="product-selection01" name="product-selection01" />
-                                    <label class="popular-card__text_list" for="product-selection01">Разновидность
-                                        товара</label>
-                                </li>
-                                <li class="popular-card__list-checkbox"><input class="popular-card__list-checkbox_input"
-                                        type="checkbox" id="product-selection02" name="product-selection02" />
-                                    <label class="popular-card__text_list" for="product-selection02">Разновидность
-                                        товара</label>
-                                </li>
                             </ul>
                             <div class="popular-card__text-wrapper__list">
-                                <p class="popular-card__price_list">700 <span class="popular-card__price_list-color">руб
-                                        / шт</span></p>
-                                <p class="popular-card__price_list">700 <span class="popular-card__price_list-color">руб
-                                        / шт</span></p>
                                 <p class="popular-card__price_list">700 <span class="popular-card__price_list-color">руб
                                         / шт</span></p>
                             </div>
