--- a/index.html
+++ b/index.html
@@ -219,7 +219,6 @@
             </div>
             
             <div class="section-item-container">
-                <!-- <div class="shadow"></div> -->
                 <div class="news-card card-shadow">
                     <a target="_blank" href="#" class="card-link"></a>
                     <div class="news-card__image-wrapper">
@@ -296,7 +295,7 @@
                 </div>
             </div>
             <div class="section-item-container">
-                <div class="news-card popular-card card-shadow">
+                <div class="news-card popular-card card-shadow popular-card__item">
                     <a target="_blank" href="./item.html" class="card-link"></a>
                     <div class="popular-card__image-wrapper">
                         <img class="popular-card__image" src="./images/card-item.png">
@@ -312,7 +311,7 @@
                                 подробнее</a></button>
                     </div>
                 </div>
-                <div class="news-card popular-card card-shadow">
+                <div class="news-card popular-card card-shadow popular-card__item">
                     <a target="_blank" href="./item.html" class="card-link"></a>
                     <div class="popular-card__image-wrapper">
                         <img class="popular-card__image" src="./images/card-item2.png">
@@ -327,7 +326,7 @@
                                 подробнее</a></button>
                     </div>
                 </div>
-                <div class="news-card popular-card card-shadow">
+                <div class="news-card popular-card card-shadow popular-card__item">
                     <a target="_blank" href="./item.html" class="card-link"></a>
                     <div class="popular-card__image-wrapper">
                         <img class="popular-card__image" src="./images/card-item.png">
@@ -342,7 +341,7 @@
                                 подробнее</a></button>
                     </div>
                 </div>
-                <div class="news-card popular-card card-shadow">
+                <div class="news-card popular-card card-shadow popular-card__item">
                     <a target="_blank" href="./item.html" class="card-link"></a>
                     <div class="popular-card__image-wrapper">
                         <img class="popular-card__image" src="./images/card-item2.png">
@@ -357,7 +356,7 @@
                                 подробнее</a></button>
                     </div>
                 </div>
-                <div class="news-card popular-card card-shadow">
+                <div class="news-card popular-card card-shadow popular-card__item">
                     <a target="_blank" href="./item.html" class="card-link"></a>
                     <div class="popular-card__image-wrapper">
                         <img class="popular-card__image" src="./images/card-item.png">
